[project]
name = "receptionist-voice-agent"
version = "0.1.0"
description = "Receptionist voice AI bot with Moss semantic retrieval over Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,deepgram,openai,cartesia,runner]>=1.5.0",
    "pipecat-ai-cli",
    # pipecat-moss from PyPI is vendored locally in ./pipecat_moss instead
    # (patched for pipecat-ai 1.5, which removed LLMMessagesFrame, and
    # updated to the current `moss` SDK).
    # NOTE: moss wheels need glibc >= 2.38 — on hosts older than that
    # (e.g. Debian 12), run via Docker (see Dockerfile.dev).
    "moss>=1.7.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
